--- a/src/Banner/Banner.css
+++ b/src/Banner/Banner.css
@@ -1,7 +1,7 @@
 /* src/Banner.css */
 @font-face {
   font-family: 'Mager';
-  src: url('./fonts/Mager.otf') format('truetype');
+  src: url('../fonts/Mager.otf') format('truetype');
 }
 
 .banner {
@@ -18,6 +18,7 @@
     padding: 0 20px;
     z-index: 1000;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+    white-space: nowrap;
   }
   
   .banner-text {
